--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -490,6 +490,7 @@ main {
     border-radius: 16px;
     border: 4px solid #303031;
     background: #FFF;
+    flex: 2;
 }
 
 .section05 .box01 .box01-h6 {
@@ -584,54 +585,6 @@ main {
     border-radius: 50%;
 }
 
-/* 
-
-.section05 .container-bottom-left h6 {
-  color: var(--black, #303031);
-  font-size: 1.25rem;
-  font-family: Roboto;
-  font-style: italic;
-  font-weight: 100;
-  line-height: 1.5rem;
-  letter-spacing: -0.025rem;
-} */
-/* ---------------- */
-/* .box02-left {
-    display: inline-flex;
-    flex: 2 381px;
-    padding: 32px 40px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    border-radius: 16px;
-    border: 4px solid #303031;
-    background:#F3F0EA;
-}
-
-.box02-left h4 {
-    color: #303031; 
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 32px;
-    letter-spacing: -0.48px;
-}
-
-.box02-left ul .members {
-    display: flex;
-    flex-direction: row;
-    gap: 24p;
-    row-gap: 16px;
-
-}
-
-.members img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-} */
-
-
 .box02-right {
     display: inline-flex;
     flex: 1 240px;
@@ -641,7 +594,6 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 24px;
-
 }
 
 .box02-right img {
@@ -790,8 +742,6 @@ main {
 }
 
 .section06 .box .box-inside {
-    /* width: 100%;
-    height: auto; */
     display: flex;
     justify-content: space-around;
     align-items: center;
