--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -175,7 +175,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
+    align-items: center;
     border-radius: 8px;
     background:#FFF;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.10);
@@ -532,7 +532,6 @@ main {
     flex-direction: row;
     gap: 12px;
     width: 100%;
-    /* width: 631px; */
 }
 
 .section05 .box02-left {
