--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -126,7 +126,7 @@ main {
     padding-right: 58px;
 }
 
-/* Section 02*/
+/* Section 02 */
 .section02 {
     display: flex;
     flex-direction: column;
@@ -709,7 +709,6 @@ main {
     margin-right: 50px;
 }
 
-
 .section06 .box-container02 .box {
     display: flex;
     flex-wrap: wrap;
@@ -796,7 +795,6 @@ main {
 }
 
 /* section 07 */
-
 .section07 {
     display: flex;
     flex-direction: row;
@@ -834,7 +832,6 @@ main {
     background: #71A894;
     border: none;
     margin-top: 60px;
-
 }
 
 .section07 .sec07-button a {
@@ -850,6 +847,7 @@ main {
     flex: 1;
 }
 
+/* Footer */
 .footer {
     display: flex;
     flex-direction: row;
@@ -859,7 +857,6 @@ main {
     gap: 40px;
     margin: 120px 56px 40px;
 }
-
 
 .footer .first-list {
     margin-right: auto;
@@ -893,71 +890,3 @@ main {
     line-height: normal;
     letter-spacing: -0.4px;
 }
-/* 
-.member1,
-.member2,
-.member3 {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding-left: 16px;} */
-
-
-/* .box02 ul {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-}
-
-.box02 ul li {
-    display: flex;
-    gap: 16px;
-}
-.box02 ul li img { border-radius: 50%;
-}
-
-
-.box02-right {
-    display: inline-flex;
-    flex: 1;
-    border-radius: 16px;
-    border: 4px solid #71A894;
-    background:#FFF; */
-
-/* 
-
-
-.box02-li3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding-left: 16px;
-
-} */
-
-/* .box02 h4 {
-    color: #303031;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 32px;
-    letter-spacing: -0.48px;
-} */
-
-/* 
-.section06 .box-container02 .box{
-    padding: 24px;
-   flex: 427px ;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-
-} */
-
-/* .section06 .box .box-inside {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-} */
